Fix photo tags alignment while photo loading

--- a/src/common-plant-page.css
+++ b/src/common-plant-page.css
@@ -82,7 +82,6 @@ section.links {
 section.photos {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 
   margin: 0 calc(2*var(--spacing));
@@ -102,6 +101,7 @@ section.photos {
 
     & label {
       background-color: var(--primary-light);
+      color: var(--fg-dark);
       margin: calc(1*var(--spacing));
       padding: calc(1*var(--spacing));
       cursor: pointer;
